# AI-Notebook-Assistant-RAG_Project-

./: .gitignore  Dockerfile  README.md  app.py  main_entry.py  pyproject.toml  railway.toml
app/: embeddings.py  main.py  rag_app.py  requirements.txt  store.py
backend/: main.py  rag_app.py  requirements.txt
data/notes/: 🚀AutoMind-X.txt
data/text_files/: python_intro.txt  rag_intro.txt
data/vector_store/66b990c6-103f-41fb-82bf-359cf8a7e8f4/: index_metadata.pickle
frontend/: app.html  index.html  landing.html  script.js  style.css
notebook/: document.ipynb  document.py  document_2.ipynb
