[project]
name = "rag-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.3.0",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.120.3",
    "ipykernel>=7.1.0",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.2",
    "openai>=2.6.1",
    "pymupdf>=1.26.5",
    "pypdf>=6.1.3",
    "sentence-transformers>=5.1.2",
    "uvicorn>=0.38.0",
]
